[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
 
 
[tool.setuptools]
packages = ["unwrap3D",
            "unwrap3D.Analysis_Functions",
            "unwrap3D.Features", 
            "unwrap3D.Geometry", 
            "unwrap3D.Image_Functions",
            "unwrap3D.Mesh", 
            "unwrap3D.Parameters",
            "unwrap3D.Registration", 
            "unwrap3D.Segmentation",
            "unwrap3D.Tracking",
            "unwrap3D.Unzipping",
            "unwrap3D.Utility_Functions", 
            "unwrap3D.Visualisation"]
 
 
#[tool.setuptools.packages.find]
#where = ["."]  # list of folders that contain the packages (["."] by default)
#include = ["segment3D"]  # package names should match these glob patterns (["*"] by default)
#exclude = ['__pycache__', '__init__.py']  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
 
 
[project]
name="u-Unwrap3D"
description="Surface-guided computing of arbitrary 3D surfaces and volumes by bidirectional mapping to lower dimensions"
authors = [{name='Felix Y. Zhou', email='felixzhou1@gmail.com'}]
readme = "README.md"
license={file = "LICENSE"}
version = "1.0.1"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


# updating the requires python in line with optimesh
requires-python = ">=3.9"
dependencies = [
    'numpy>=1.23,<2.0',
    'cgal>=5.5', # requires 
    'libigl<2.6',
    'contourpy<=1.2.0',
    'pyacvd==0.2.10', # to satisfy issues with python>=3.11
    'trimesh[easy]',
    'SimpleITK',
    'opencv-contrib-python==4.5.*', # works
    'point-cloud-utils',
    'matplotlib',
    #'optimesh', # bad. 
    'scikit-image',
    'scikit-learn',
    'scipy',
    'intel_openmp==2023.1.0',
    'mkl==2023.1.0',
    'pypardiso==0.4.*', #numpy>=1.23,<2.0',
    'tqdm',
    'transforms3d',
    'robust-laplacian',
    'pygeodesic',#, numpy>=1.23,<2.0',
    'potpourri3d',
    #'scikit-fmm<=2025.01.29', # compilation depends numpy2. 
    'POT',
    'hausdorff',
    'numba<=0.60.0',
    'dipy',
    'lxml==5.4.0'
    ]

[project.urls]
Homepage = "https://github.com/DanuserLab/u-unwrap3D"
Issues = "https://github.com/DanuserLab/u-unwrap3D/issues"

